<package>
  <name>capability_eval</name>
  <version>0.1.0</version>
  <description>Evaluate the accuracy and speed of a capability map.</description>

  <author>Jochen Kempfle</author>
  <maintainer email="c.dornhege@gmail.com">Christian Dornhege</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/capability_eval</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>capability_map</build_depend>
  <build_depend>capability_map_generator</build_depend>
  <build_depend>pluginlib</build_depend>
  <run_depend>capability_map</run_depend>
  <run_depend>capability_map_generator</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>

</package>


