<package>
  <name>capability_map_generator</name>
  <version>0.1.0</version>
  <description>Generation of capability map from IK</description>

  <author>Jochen Kempfle</author>
  <maintainer email="c.dornhege@gmail.com">Christian Dornhege</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/capability_map_generator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>capability_map</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>kinematics_base</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>kinematics_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <run_depend>capability_map</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>kinematics_base</run_depend>
  <run_depend>kinematics_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning</run_depend>

  <export>
      <capability_map_generator plugin="${prefix}/reachability_dummy_plugins.xml" />
  </export>

</package>

